# netmon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: pull_test.yml  release-please.yml  release.yml  rust.yml  stable_branch_test.yml  stable_branch_testing.yml  test.yml  upload-binaries.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
